# openjph-bindings

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  julia-openjph.yml  julia-zarrcompressorjph.yml  native.yml  python.yml  release.yml  tests.yml  wheels.yml
docs/: RELEASING.md
julia/: README.md
julia/OpenJPH.jl/: Artifacts.toml  Manifest.toml  Project.toml
julia/OpenJPH.jl/src/: OpenJPH.jl
julia/OpenJPH.jl/test/: runtests.jl
julia/ZarrCompressorJPH.jl/: Manifest.toml  Project.toml
julia/ZarrCompressorJPH.jl/src/: ZarrCompressorJPH.jl
julia/ZarrCompressorJPH.jl/test/: runtests.jl
native/: CMakeLists.txt  README.md
native/include/: openjph_c.h
native/src/: openjph_c.cpp
native/tests/: leak_check.c  roundtrip_test.c
python/: .gitignore  CMakeLists.txt  README.md  hatch_build.py  pyproject.toml
python/benchmarking/: README.md  benchmark.py  calibrate.py  census.py  main.py  metrics.py  plot.py  plots.py  sampler.py
python/jp15/: __init__.py  _backend.py  zarr.py
python/jp15/codecs/: common.py  simplezarr.py  zarr.py
python/src/openjph/: __init__.py  _backend.py  _constants.py  _openjph.cpp  zarr.py
python/tests/: test_backend.py  test_leaks.py  test_zarr.py
tests/: check_versions.sh
tests/interop/: jl_read.jl  py_write.py  run.sh
tools/: build_native_local.jl  build_wheels.py  download_native.py  extract_native_from_wheels.sh  gen_artifacts.jl
