[build-system]
requires = [
    "scikit-build-core>=0.10",
]
build-backend = "scikit_build_core.build"

[project]
name = "pyopenjph"
version = "0.1.0"
description = "Python bindings for OpenJPH HTJ2K encode/decode"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "BSD-2-Clause" }
authors = [
    { name = "Alessandro A. Grande" },
]
dependencies = [
    "numpy>=2,<3",
]

[project.optional-dependencies]
zarr = [
    "zarr>=3.1.3",
]
test = [
    "pytest>=8",
    "zarr>=3.1.3",
]
dev = [
    "pre-commit>=4.3",
]

[project.entry-points."zarr.codecs"]
openjph_htj2k = "openjph.zarr:OpenJPHCodec"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
minimum-version = "build-system.requires"
wheel.packages = ["src/openjph"]

[tool.cibuildwheel]
build = "cp312-* cp313-*"
test-extras = ["test", "zarr"]
test-command = "pytest {package}/tests"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.13"
