[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jp15"
version = "0.1.0"
description = "Python bindings for OpenJPH HTJ2K encode/decode"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "BSD-2-Clause" }
authors = [{ name = "Alessandro A. Grande" }]
dependencies = ["numpy>=2,<3"]

[project.optional-dependencies]
zarr = ["zarr>=3.1.3"]
test = ["pytest>=8", "zarr>=3.1.3"]
dev = ["pre-commit>=4.3"]

[project.entry-points."zarr.codecs"]
openjph_htj2k = "jp15.zarr:OpenJPHCodec"

[tool.hatch.build.targets.wheel]
packages = ["jp15"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
